--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,19 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  font-weight: 600;
+  gap: 1em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.timer .field {
+  display: grid;
+}
+
+.timer .value {
+  font-size: 36px;
+}
